service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-simple-service
  labels:
    app: simple-service
spec:
  selector:
    app: simple-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
