ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simple-service
  labels:
    app: simple-service
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: service-simple-service
            port:
              number: 80
        path: /health
